@@ -7,5 +7,6 @@ DIST gitlab-workhorse-3.3.1.tar.bz2 762376 SHA256 2ddbd4e0ad3db85fffdc8b932d1745
 EBUILD gitlab-workhorse-3.0.0.ebuild 1012 SHA256 cd7d9f593221b3ef2baeea527060ef56178a71332af7a5bdfcd6285c49c9f329 SHA512 7c9d1bf373e2557b6a01f8fecfacf142322fed91cebc462a249f7cb1e02a953d4fd6bce2e8283adb6a9060c9a0cb2e7cb1b99da8a1926210c3d580589643fe0b WHIRLPOOL 61521ad8c87744395ada1300c5d3d237b2b356dd874232f371eb7ed2a6a90b29155cad810953a3f82d872318bbad6fb164fc9ac80a836a9d42326bb651e2a797
 EBUILD gitlab-workhorse-3.2.0.ebuild 1012 SHA256 4dc3f893683d0fab13d4c0d43090df4bdcd5543dff4ca74940999cb797aa7312 SHA512 199d418e6a1e60b183a16f28f08cc20fa67771395d9f2da741227f102d40d71d91a5c27bb8d9741995a2aa117111dbffe6bea9ef854f3c35bb41ed81045ab88d WHIRLPOOL 07f534716e45600c9bb9912c1f7beca402067df7b572965e08e431f922327de541614952b37ec126bcb7bb6ae8d66fe4084f4183d75d2e686fd6888a4b866ea5
 EBUILD gitlab-workhorse-3.3.1.ebuild 1012 SHA256 8e4f366570bcb05c2f6ee0d0a10787bea24210325db9b02e19c13188ddb1aded SHA512 0d1342b15450b3220490655e4951230aa168c5ce1bd0d77d4a6a7f25cb507563e9b58d590bc55b74f68bb0ee25c792bf39b90aea3709d2c2bbb42aac473ad5aa WHIRLPOOL 364597c47e6cb0a466b151eab5034eb963123b12d113bc354816521ded1aa48ca66d0d1d8ff310e2af35e3d180f5913dbeefbb757a7a24fe6c795d5bb2d563c8
-MISC ChangeLog 8215 SHA256 8cc84cf2a47a8c288d859139dee30885f559542e208332ff89a4e7a602d3e0e7 SHA512 c2ad7cead0d80427f6650ecd969742549882d5d3b484aa616601634eef137b355f789e038b7a71104503ab8309dbd47cf4c7cbab0ea625aff2fcc5a5d08937a9 WHIRLPOOL b402dccbedc808b881b0be435a25fa6d74c076660943ace7a206d991bfc6b4cff3fa1d7c97758c43b629f96a05a89d126334e0a7ce4969b16c7b39c58ae84a22
+EBUILD gitlab-workhorse-3.6.0.ebuild 906 SHA256 515e048de7cd29e69d2fc5fd3a22cd36ad888728b16e36992f37fc4385c47c51 SHA512 bd0ad38426aa81c91bd50d0e2ffc7e8e5f82442481b1b96d34e8058331d5683c9193e49b250b180369876166f45886c2962e08951d904d122a2aa9f2ad620022 WHIRLPOOL 23db86ad21323083fc5b79772e1c76e7fb08e9dc766d0e31f94323bb9d42a9bcb3315aef1b22828276ffc62e88aa9b2c27f34b87243a72c95ebd51c3e1d8463e
+MISC ChangeLog 8436 SHA256 ecaca76a19719827c910fd31344f526bac54a237d45420aaa5c6331482591ed5 SHA512 38b2c48769e4b94764c7ab2d119a932950f863f99d2741065292842a24dbbabb1bbbcf1bb3552ad53e60fa4db0f3ab52642bf60224fe795a87644951a795c7d4 WHIRLPOOL 524137e12a10f8a3675c2c79080920458862a376af1fcf4c9f9b1a67eaf2c5c000aabd334b36d134de8f9857674aa7007a4ba675bcba219ecf689d6ebea3ec85
 MISC metadata.xml 248 SHA256 7b43be15755627edf5c12cf1b50c607d781558640bf8375d685d51d7ade99a32 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2 WHIRLPOOL 993013c9878ead35469db13d3072f694a341ee654182e0c31d0678f5dd6de4bdc8d59a0b7bb6d685dc41ea6b55dac518cd8034131baea8002170c680e50304d1
