@@ -1,0 +1,42 @@
+# Copyright 1999-2018 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+
+EAPI="6"
+
+EGIT_REPO_URI="https://gitlab.com/gitlab-org/gitlab-workhorse.git"
+EGIT_COMMIT="v${PV}"
+
+inherit eutils git-r3 user
+
+DESCRIPTION="This is the new backend for Git-over-HTTP communication needed for GitLab >= 8.4"
+HOMEPAGE="https://gitlab.com/gitlab-org/gitlab-workhorse"
+
+LICENSE="MIT"
+SLOT="0"
+KEYWORDS="~amd64 ~x86 ~arm ~arm64"
+
+DEPEND=">=dev-lang/go-1.8.3"
+
+RESTRICT="mirror"
+
+src_prepare() {
+	epatch "${FILESDIR}/0001-fix-Makefile.patch"
+	sed -i -e "s/@@VERSION@@/${PV}/" Makefile
+	eapply_user
+}
+
+src_install() {
+	local dest=/usr/bin
+
+	diropts -m755
+	dodir ${dest}
+
+	exeinto ${dest}
+	for f in "${PN}" gitlab-zip-cat gitlab-zip-metadata ; do
+		doexe "${S}/${f}"
+	done
+
+	## RC script ##
+	newinitd "${FILESDIR}/${PN}-0.8.2.init" "${PN}"
+	newconfd "${FILESDIR}/${PN}-0.8.2.conf" "${PN}"
+}
